--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,13 @@
   --color-imrantext-500: #2D2F32;
   --color-imrantextdark-500: #F3F3F3;
   --color-imranbgdark-500: #0D0D0D;
-  --color-imranbgred-500: #b71d1d;
-  --color-imranbggreen-500: #00b34a;
+  --color-imranbgred-500: #8b0000;
+  --color-imranbggreen-500: #103d28;
   --color-imranbgblue-500: #004cff;
-  --color-imranbgyellow-500: #ffee00;
-  --color-imranbgblack-500: #121212;
+  --color-imranbgyellow-500: #b3b300;
+  --color-imranbgblack-500: #272727;
+  --color-imranbglight-500: #FFF7F3;
+  --color-imranbgpurple-500: #3c0d60;
 }
 
 
@@ -22,57 +24,67 @@
     --color-secondary: green;
     --color-bg-primary: #F3F3F3;
     --color-text-base: #2D2F32;
-    --color-text-hover:rgb(0, 172, 32);
+    --color-text-hover: rgb(0, 172, 32);
   }
 
   /* smooth transition when change color */
-  *{
+  * {
     @apply transition-colors duration-300 ease-in-out
   }
 }
-  .theme-light {
-    --color-primary: black;
-    --color-secondary: gray;
-    --color-text-hover: #178573;
-    --color-text-base: #2D2F32;
-    --color-bg-primary: #FFF7F3;
-  }
-  .theme-dark {
-    --color-primary: black;
-    --color-secondary: gray;
-    --color-text-hover: #ffffff;
-    --color-text-base: #d8d8d8;
-    --color-bg-primary: #272727;
-  }
 
-  .theme-red {
-    --color-primary: rgb(174, 51, 51);
-    --color-secondary: rgb(230, 158, 24);
-    --color-text-hover: #ededed;
-    --color-text-base: #f5adad;
-    --color-bg-primary: #b71d1d;
-  }
+.theme-light {
+  --color-primary: black;
+  --color-secondary: gray;
+  --color-text-hover: #178573;
+  --color-text-base: #2D2F32;
+  --color-bg-primary: #FFF7F3;
+}
 
-  .theme-green {
-    --color-primary: green;
-    --color-secondary: lime;
-    --color-text-hover: #ededed;
-    --color-text-base: #052e16;
-    --color-bg-primary: #00b34a;
-  }
+.theme-dark {
+  --color-primary: black;
+  --color-secondary: gray;
+  --color-text-hover: #ffffff;
+  --color-text-base: #d8d8d8;
+  --color-bg-primary: #272727;
+}
 
-  .theme-yellow {
-    --color-primary: rgb(255, 208, 0);
-    --color-secondary: rgb(177, 180, 15);
-    --color-text-hover: #ededed;
-    --color-text-base: #052e16;
-    --color-bg-primary: #b3b300;
-  }
+.theme-red {
+  --color-primary: rgb(174, 51, 51);
+  --color-secondary: rgb(230, 158, 24);
+  --color-text-hover: #fff0f0;
+  --color-text-base: #ffe5e5;
+  --color-bg-primary: #8b0000;
+}
 
-  .theme-blue {
-    --color-primary: rgb(0, 200, 255);
-    --color-secondary: rgb(70, 148, 166);
-    --color-text-hover: #2b2b2b;
-    --color-text-base: #e9e9e9;
-    --color-bg-primary: #007db3;
-  }
+.theme-green {
+  --color-primary: green;
+  --color-secondary: lime;
+  --color-text-hover: #76ff7a;
+  --color-text-base: #e6ffee;
+  --color-bg-primary: #103d28;
+}
+
+.theme-yellow {
+  --color-primary: rgb(255, 208, 0);
+  --color-secondary: rgb(177, 180, 15);
+  --color-text-hover: #ededed;
+  --color-text-base: #052e16;
+  --color-bg-primary: #b3b300;
+}
+
+.theme-blue {
+  --color-primary: rgb(0, 200, 255);
+  --color-secondary: rgb(70, 148, 166);
+  --color-text-hover: #d6f0ff;
+  --color-text-base: #f0f9ff;
+  --color-bg-primary: #0a2540;
+}
+
+.theme-purple {
+  --color-primary: rgb(0, 200, 255);
+  --color-secondary: rgb(70, 148, 166);
+  --color-text-hover: #f3e8ff;
+  --color-text-base: #e9d8fd;
+  --color-bg-primary: #3c0d60;
+}
